minor template change

--- a/views/widgets/widget.hbs
+++ b/views/widgets/widget.hbs
@@ -9,8 +9,8 @@
 <div id="root2"></div>
 <script>
     window.onedirectSettings = {
-        apiKey: {{brandHash}},
-        widgetHash: {{widgetHash}},
+        apiKey: '{{brandHash}}',
+        widgetHash: '{{widgetHash}}',
         settings: {
             widgetPosition: {
                 left: 45,
