--- a/views/widgets/widget.hbs
+++ b/views/widgets/widget.hbs
@@ -3,6 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Widgets testing</title>
+    <style>
+        body {
+            background-color: #D9AFD9;
+            background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+            height:100vh;
+        }
+    </style>
 </head>
 <body>
 <div id="root"></div>
