--- a/views/widgets/init.hbs
+++ b/views/widgets/init.hbs
@@ -31,7 +31,7 @@
                 <label for="widgetHash">Widget Hash</label>
                 <input type="text" class="form-control" id="widgetHash" aria-describedby="emailHelp">
             </div>
-            <button type="submit" class="btn btn-primary">Lets go</button>
+            <button type="submit" class="btn btn-primary">Let's go</button>
         </form>
         <table style="margin-top: 2rem;" class="table table-dark">
             <thead>
