--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,16 +3,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>
-        {{name}}
+        Irasshaimase
     </title>
 </head>
 <body>
-<div class="container mt-2">
-    <header>
-        <h2>Welcome</h2>
-        <p>Here is the testing page for {{name}}
-        </p>
-    </header>
-</div>
+{{component partialName }}
 </body>
 </html>
