--- a/views/widgets/init.hbs
+++ b/views/widgets/init.hbs
@@ -11,14 +11,9 @@
     .center {
         margin-top: 4rem;
     }
-
-    body {
-        background-color: #D9AFD9;
-        background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
-        height: 100vh;
-    }
 </style>
 <body>
+{{component partialName }}
 <div class="container">
     <div class="center">
         <form onSubmit="openWidget();return false;" class="center">
