add multiple docker support

--- a/views/widgets/init.hbs
+++ b/views/widgets/init.hbs
@@ -60,7 +60,7 @@
         }
         localStorage.setItem("widgetHash", widgetHash);
         localStorage.setItem("brandHash", brandHash);
-        window.location.href = `./widget?brandHash=${brandHash}&widgetHash=${widgetHash}`;
+        window.location.href = `./widget?brandHash=${brandHash}&widgetHash=${widgetHash}&docker={{docker}}`;
     }
 </script>
 </body>
