--- a/views/widgets/widget.hbs
+++ b/views/widgets/widget.hbs
@@ -32,6 +32,6 @@
     window.od.messenger = mc;
     // od.messenger('open');
 </script>
-<script src="/javascripts/od-messaging.main@v1.14.min.27.js"></script>
+<script src="/javascripts/od-messaging.main@v1.14.min.{{docker}}.js"></script>
 </body>
 </html>
