--- a/views/widgets/init.hbs
+++ b/views/widgets/init.hbs
@@ -26,6 +26,10 @@
                 <label for="widgetHash">Widget Hash</label>
                 <input type="text" class="form-control" id="widgetHash" aria-describedby="emailHelp">
             </div>
+            <div class="form-group">
+                <label for="widgetHash">Docker</label>
+                <input type="text" class="form-control" id="docker" aria-describedby="emailHelp">
+            </div>
             <button type="submit" class="btn btn-primary">Let's go</button>
         </form>
         <table style="margin-top: 2rem;" class="table table-dark">
@@ -52,15 +56,18 @@
 <script>
     document.querySelector("#brandHash").value = localStorage.getItem("brandHash");
     document.querySelector("#widgetHash").value = localStorage.getItem("widgetHash");
+    document.querySelector("#docker").value = localStorage.getItem("docker") || 28;
     const openWidget = () => {
         const brandHash = document.querySelector("#brandHash").value;
         const widgetHash = document.querySelector("#widgetHash").value;
+        const docker = document.querySelector("#docker").value;
         if (!brandHash || !widgetHash) {
             return;
         }
         localStorage.setItem("widgetHash", widgetHash);
         localStorage.setItem("brandHash", brandHash);
-        window.location.href = `./widget?brandHash=${brandHash}&widgetHash=${widgetHash}&docker={{docker}}`;
+        localStorage.setItem("docker", docker);
+        window.location.href = `./widget?brandHash=${brandHash}&widgetHash=${widgetHash}&docker=${docker}`;
     }
 </script>
 </body>
