--- a/views/widgets/init.hbs
+++ b/views/widgets/init.hbs
@@ -90,7 +90,7 @@
         const widgetHash = document.querySelector("#widgetHash").value;
         const docker = document.querySelector("#docker").value;
         const themes = document.getElementsByName('theme');
-        let themeName = 'gradientBeta';
+        let themeName = 'stars';
         for(let i = 0; i < themes.length; i++) {
             if(themes[i].checked){
                 themeName = themes[i].value;
