--- a/views/widgets/init.hbs
+++ b/views/widgets/init.hbs
@@ -96,7 +96,7 @@
                 themeName = themes[i].value;
             }
         }
-        if (!brandHash || !widgetHash) {
+        if (!brandHash) {
             return;
         }
         localStorage.setItem("widgetHash", widgetHash);
