--- a/views/widgets/init.hbs
+++ b/views/widgets/init.hbs
@@ -27,7 +27,7 @@
                 <input type="text" class="form-control" id="widgetHash" aria-describedby="emailHelp">
             </div>
             <div class="form-group">
-                <label for="widgetHash">Docker</label>
+                <label for="widgetHash">Docker(27,28,30,staging,prod)</label>
                 <input type="text" class="form-control" id="docker" aria-describedby="emailHelp">
             </div>
             <div class="form-group">
@@ -42,6 +42,12 @@
                     <input class="form-check-input" type="radio" value="gradientBeta" name="theme" id="gradientBeta">
                     <label class="form-check-label" for="gradientBeta">
                         Dynamic colors
+                    </label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" value="stars" name="theme" id="stars">
+                    <label class="form-check-label" for="stars">
+                        Stars
                     </label>
                 </div>
                 <div class="form-check">
