--- a/views/widgets/widgetProd.hbs
+++ b/views/widgets/widgetProd.hbs
@@ -8,7 +8,7 @@
 
 <script>
   window.onedirectSettings = {
-    apiKey: '{{brandHash}}',
+    apiKey: '{{brandHash}}=',
     widgetHash: '{{widgetHash}}',
   }
 </script>
@@ -20,7 +20,7 @@
 </script>
 
 <script>
-  fetch('https://msg.onedirect.in/kong/mgateway/public/v1/sdk-version?brandHash={{brandHash}}&channelId=1')
+  fetch('https://msg.onedirect.in/kong/mgateway/public/v1/sdk-version?brandHash={{brandHash}}=&channelId=1')
     .then((r) => r.json())
     .then((r) => {
       !function (e, s, n, t, a) { el = s.createElement(n), p = s.getElementsByTagName(n)[0], el.async = 1, el.id = "onedirect-messaging-sdk", el.src = `https://s3-ap-southeast-1.amazonaws.com/onedirect/messaging/web-sdk/production/${r.version}/od-messaging.init.v1.0.min.js`, p.parentNode.insertBefore(el, p) }(window, document, "script");
